--- a/app/_includes/block/block.testimonials.html
+++ b/app/_includes/block/block.testimonials.html
@@ -1,21 +1,13 @@
 {% capture block %}
+{% assign testimonials = site.data.testimonials.[include.type] %}
 <strong class="subtitle">Reacties</strong>
 <div class="owl-carousel owl-theme">
-{% if page.path contains 'trouwambtenaar' %}
-	{% for testimonial in site.data.testimonials.trouwambtenaar %}
+	{% for testimonial in testimonials %}
 		<article>
 			<blockquote class="quote">{{ testimonial.text }}"</blockquote>
 			<p class="name">{{ testimonial.name }}</p>
 		</article>
 	{% endfor %}
-{% elsif page.path contains 'bedrijfsoptredens' %}
-	{% for testimonial in site.data.testimonials.bedrijfsoptredens %}
-		<article>
-			<blockquote class="quote">{{ testimonial.text }}"</blockquote>
-			<p class="name">{{ testimonial.name }}</p>
-		</article>
-	{% endfor %}
-{% endif %}
 </div>
 {% endcapture %}
 
