--- a/app/assets/sass/elements/form/_form.scss
+++ b/app/assets/sass/elements/form/_form.scss
@@ -21,7 +21,7 @@
 			background: #fff9f9;
 		}
 	}
-	
+
 	::-webkit-input-placeholder {
 	  color: $placeholder;
 	}
@@ -45,7 +45,8 @@
 		background-color: $white !important;
 	}
 
-	input, textarea {
+	input,
+	textarea {
 		max-width: 100%;
 		border: 1px solid #d0d0d0;
 		background-color: transparent;
@@ -72,39 +73,45 @@
 		}
 	}
 
-	input[type='submit'],
-	.send {
-		color: $white;
-		font-weight: 800;
-		font-size: 1rem;
-		text-transform: uppercase;
-		border: none;
-		padding: 1rem;
-		margin-top: $padding;
-		transition: all $speed/2;
-		margin-bottom: 0;
-
-			+ .checkmark {
-				display: none;
-				position: absolute;
-				width: 30px;
-				fill: white;
-				margin-top: -42px;
-				margin-left: 30px;
-				z-index: 300;
-				position: relative;
-			}
-
-		&.success {
-			background-color: $primary !important;
-			box-shadow: none;
-	    max-width: 340px;
-	    pointer-events: none;
-
-			+ .checkmark {
-				display: block;
-			}
+	input {
+		&.to {
+			display: none !important;
 		}
+
+		&[type='submit'],
+		.send {
+			color: $white;
+			font-weight: 800;
+			font-size: 1rem;
+			text-transform: uppercase;
+			border: none;
+			padding: 1rem;
+			margin-top: $padding;
+			transition: all $speed/2;
+			margin-bottom: 0;
+	
+				+ .checkmark {
+					display: none;
+					position: absolute;
+					width: 30px;
+					fill: white;
+					margin-top: -42px;
+					margin-left: 30px;
+					z-index: 300;
+					position: relative;
+				}
+	
+			&.success {
+				background-color: $primary !important;
+				box-shadow: none;
+				max-width: 340px;
+				pointer-events: none;
+	
+				+ .checkmark {
+					display: block;
+				}
+			}
+	}
 	}
 }
 
