fixing minor things

--- a/app/_includes/section/section.footer.html
+++ b/app/_includes/section/section.footer.html
@@ -17,8 +17,8 @@
 				</aside>
 				<address class="address">
 						Jelle Kuiper Producties BV<br>
-						Buiksloterdijk 306<br>
-						1034 ZE Amsterdam<br>
+						Kustvaarderstraat 16<br>
+						1034 JH Amsterdam<br>
 						T: <a class="tel"></a><br>
 						E: <a class="mail"></a>
 				</address>
