--- a/app/assets/sass/elements/blocks/_block.hero.scss
+++ b/app/assets/sass/elements/blocks/_block.hero.scss
@@ -16,7 +16,8 @@
 		top: 0;
 		left: 0;
 		z-index: 1;
-		background-color: rgba(black, .5);
+    background-color: black;
+    opacity: .3;
 	}
 }
 
