--- a/app/assets/sass/mixins/_font.scss
+++ b/app/assets/sass/mixins/_font.scss
@@ -9,7 +9,7 @@
   }
 
   @if $type == "title" {
-    font-family: "Oswald";
+    font-family: "MuseoSans";
     font-size: 2rem;
     letter-spacing: 0.3;
     text-transform: uppercase;
