--- a/app/assets/sass/base/_reset.scss
+++ b/app/assets/sass/base/_reset.scss
@@ -31,6 +31,10 @@ time, mark, audio, video {
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
 }
 
+.owl-nav.disabled {
+  display: none;
+}
+
 .owl-stage {
 	max-width: initial;
 }
