--- a/app/assets/sass/elements/menu/_main-menu.scss
+++ b/app/assets/sass/elements/menu/_main-menu.scss
@@ -1,6 +1,6 @@
 .main-menu {
 		position: relative;
-	
+
 	.nav {
 		padding-bottom: $gutter * 2;
 		display: flex;
@@ -29,7 +29,7 @@
 				position: relative;
 				width: 100%;
 				text-decoration: none;
-				color: $secundary;
+				color: $black;
 				transition: all $speed/2;
 
 				&:after {
@@ -83,13 +83,12 @@
 				&:first-child {
 					display: none;
 				}
-				
+
 				&:last-child {
 					opacity: 1;
-						
+
 					.menu-link {
 						background-color: $primary;
-						color: $white;
 						border-radius: $border-radius;
 						text-decoration: none;
 						padding: $padding $gutter;
@@ -109,7 +108,6 @@
 
 				.menu-link {
 					@include font('normal');
-					color:  $white;
 					width: auto;
 
 					&:after {
