--- a/app/_layouts/detailpage.html
+++ b/app/_layouts/detailpage.html
@@ -5,6 +5,8 @@ layout: master
 
 
 <main>
+  <a href="/theaterproducties" class="back">{% include svg/arrow-left.svg %} terug</a>
+  <h1 class="page-title">{{ page.title }}</h1>
 	<picture class="picture focuspoint">
 		<img class="img" src="{{ page.headerimage }}" alt="Jelle Kuiper">
 	</picture>
