--- a/app/assets/sass/variables/_colors.scss
+++ b/app/assets/sass/variables/_colors.scss
@@ -4,8 +4,11 @@ $secundary: #242424;
 
 $white: white;
 $black: $secundary;
+
 $grey: #333333;
+$grey-darker: #24242499;
 $grey-light: #fafafa;
+
 
 $placeholder: #afafaf;
 
@@ -14,4 +17,3 @@ $box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.15);
 $shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
 $border-radius: 5px;
 $text-shadow:  0 1px 4px rgba(0, 0, 0, 0.5);
-$menu-toggle: $white;
