--- a/app/assets/sass/variables/_grid.scss
+++ b/app/assets/sass/variables/_grid.scss
@@ -17,13 +17,16 @@ $offset: 50px;
 
 :root {
   --max-width: 100vw;
+  --menu-height: 60px;
 
   @include breakpoint(960px) {
     --max-width: 960px;
+    --menu-height: 94px;
   }
 }
 
 $max-width: var(--max-width);
+$menu-height: var(--menu-height);
 
 body {
   &:after {
@@ -50,7 +53,7 @@ body {
     display: none;
     position: fixed;
     pointer-events: none;
-    top: 0;
+    bottom: 0;
     right: 10px;
     opacity: .3;
     background-color: $primary;
