--- a/app/assets/sass/elements/menu/_menu-toggle.scss
+++ b/app/assets/sass/elements/menu/_menu-toggle.scss
@@ -60,7 +60,7 @@ $menu-toggle: $black;
 	}
 }
 
-@include breakpoint ($desktop) {
+@include breakpoint(960px) {
 	.main-menu {
 		.menu-toggle {
 			display: none;
