--- a/app/_includes/block/block.hero.html
+++ b/app/_includes/block/block.hero.html
@@ -16,9 +16,8 @@
     </picture>
   {% endif %}
 
-  <h1 class="title">{{ page.title }}</h1>
+  <h1 class="page-title">{{ page.title }}</h1>
 </div>
-
 
 	<div class="introduction">
 		<h2 class="subtitle">{{ page.keywords }}</h2>
