--- a/app/assets/sass/elements/blocks/_block.hero.scss
+++ b/app/assets/sass/elements/blocks/_block.hero.scss
@@ -1,26 +1,3 @@
-.hero-image {
-	display: block;
-	height: calc(100vh + 100px);
-	width: 100vw;
-	z-index: 1;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -5;
-
-	&:after {
-		content: '';
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		z-index: 1;
-    background-color: black;
-    opacity: .3;
-	}
-}
-
 .block.hero {
 	display: flex;
 	align-items: center;
@@ -29,7 +6,36 @@
 	justify-content: center;
 	position: relative;
 	width: 100vw;
-	overflow: hidden;
+  overflow: hidden;
+
+  .hero-image {
+    display: block;
+    height: calc(100vh + 100px);
+    width: 100vw;
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -5;
+  
+    &:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1;
+      background-color: black;
+      opacity: .3;
+    }
+  }
+
+  .page-title {
+    @include font('title');
+    color: $white;
+    text-align: center;
+  }
 
 	.introduction {
 		width: #{100vw / 24 * 22};
@@ -37,18 +43,10 @@
 		align-self: center;
 		max-width: $max-width;
 		text-align: center;
-
-		.title {
-			@include font('title');
-		}
+    padding: $padding 0;
 
 		.subtitle {
 			@include font('subtitle');
-		}
-
-		.introduction,
-		.title {
-			padding: $padding 0;
 		}
 
 		.button {
@@ -63,31 +61,31 @@
 	}
 }
 
-@include breakpoint($desktop) {
-	.hero-image {
-		margin-top:-100px;
-	}
+// @include breakpoint($desktop) {
+// 	.hero-image {
+// 		margin-top:-100px;
+// 	}
 
-	.block.hero {
-		justify-content: center;
-		height: calc(85vh);
-		padding: 0;
+// 	.block.hero {
+// 		justify-content: center;
+// 		height: calc(85vh);
+// 		padding: 0;
 
-		.title {
-			font-size: 3em !important;
-		}
+// 		.page-title {
+// 			font-size: 3em !important;
+// 		}
 
-		.subtitle {
-			font-size: 20px !important;
-		}
+// 		.subtitle {
+// 			font-size: 20px !important;
+// 		}
 
-		.introduction {
-			line-height: 1.7;
-			margin-bottom: $padding;
-		}
+// 		.introduction {
+// 			line-height: 1.7;
+// 			margin-bottom: $padding;
+// 		}
 
-		.button {
-			max-width: calc(#{$max-width} / 37 * 15);
-		}
-	}
-}
+// 		.button {
+// 			max-width: calc(#{$max-width} / 37 * 15);
+// 		}
+// 	}
+// }
