--- a/app/assets/sass/elements/blocks/_block.references.scss
+++ b/app/assets/sass/elements/blocks/_block.references.scss
@@ -31,12 +31,14 @@
 				position: absolute;
 				z-index: 500;
 				left: 0%;
-				height: 170px;
-				width: 100%;
+				height: 220px;
+        width: 100%;
+        margin-top: $gutter;
 
 				.title {
 					@include font('title');
-					text-shadow: $text-shadow;
+          text-shadow: $text-shadow;
+          font-size: 1.7rem;
 				}
 
 				.keywords {
