--- a/app/assets/sass/elements/blocks/_block.usp.scss
+++ b/app/assets/sass/elements/blocks/_block.usp.scss
@@ -5,7 +5,8 @@
 		flex-direction: column;
 
 		.subtitle {
-			padding: $padding 0;
+      padding: $padding/2 0;
+      font-family: "MuseoSans";
 		}
 
 		.quote {
@@ -30,14 +31,24 @@
 			text-align: left;
 			margin-bottom: $gutter*3;
 
-			&:nth-child(even) {
-				.picture {
+      &:nth-child(odd) {
+        .picture {
+          margin-right: calc(#{$max-width} / 37 * 1);
+          margin-left: calc(#{$max-width} / 37 * -1);
+        }
+      }
+      
+      &:nth-child(even) {
+        .picture {
 					order: 2;
 				}
-			}
+        .article {
+          margin-right: calc(#{$max-width} / 37 * 1);
+        }
+      }
 
 			.article {
-				flex: 0 0 calc(#{$max-width} / 37 * 17);
+				flex: 0 0 calc(#{$max-width} / 37 * 16);
 				padding: calc(#{$max-width} / 37 * 1);
 
 				.subtitle {
@@ -53,9 +64,9 @@
 			}
 
 			.picture {
-				flex: 0 0 calc(#{$max-width} / 37 * 17);
+				flex: 0 0 calc(#{$max-width} / 37 * 19);
 				position: relative;
-			}		
+			}
 		}
 	}
 }
