--- a/app/assets/sass/elements/blocks/_block.hero.scss
+++ b/app/assets/sass/elements/blocks/_block.hero.scss
@@ -1,97 +1,76 @@
+$hero-height: calc(80vh - #{$menu-height});
+
 .block.hero {
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-	height: calc(90vh - #{$offset});
-	justify-content: center;
-	position: relative;
-	width: 100vw;
-  overflow: hidden;
-
-  .hero-wrapper {
-  	height: calc(90vh - #{$offset});
-    outline: 1px solid red;
-    
-  }
-
-  .hero-image {
-    display: block;
-    height: calc(100vh + 100px);
-    width: 100vw;
-    z-index: 1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -5;
+  .inner {
+    .hero-wrapper {
+      height: $hero-height;
+      position: relative;
   
-    &:after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      z-index: 1;
-      background-color: black;
-      opacity: .3;
+      .hero-image {
+        display: block;
+        height: $hero-height;
+        width: 100vw;
+        z-index: 1;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -5;
+      }
+  
+      .page-title {
+        @include font('title');
+        color: $white;
+        position: absolute;
+        bottom: $gutter*2;
+        left: 50%;
+        transform: translateX(-50%);
+        text-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        text-align: center;
+      }
+    }
+  
+    > .introduction {
+      color: $black;
+      text-align: center;
+      width: 90%;
+      margin: $padding*2 auto;
+      margin-bottom: $padding*4;
+      max-width: 640px;
+  
+      .subtitle {
+        padding: $gutter/2 0;
+        @include font('subtitle');
+        font-family: "MuseoSans";
+      }
+      
+      .introduction {
+        position: relative;
+        width: 100%;
+  
+        &:after {
+          content: '';
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: -30px;
+          width: 90px;
+          height: 3px;
+          background-color: $primary;
+        }
+      }
     }
   }
-
-  .page-title {
-    @include font('title');
-    color: $white;
-    text-align: center;
-  }
-
-	.introduction {
-		width: #{100vw / 24 * 22};
-		color: $white;
-		align-self: center;
-		max-width: $max-width;
-		text-align: center;
-    padding: $padding 0;
-
-		.subtitle {
-			@include font('subtitle');
-		}
-
-		.button {
-			text-transform: uppercase;
-			box-shadow: $box-shadow;
-			width: 100%;
-
-			&:hover {
-				background-color: $hover;
-			}
-		}
-	}
 }
 
-// @include breakpoint($desktop) {
-// 	.hero-image {
-// 		margin-top:-100px;
-// 	}
-
-// 	.block.hero {
-// 		justify-content: center;
-// 		height: calc(85vh);
-// 		padding: 0;
-
-// 		.page-title {
-// 			font-size: 3em !important;
-// 		}
-
-// 		.subtitle {
-// 			font-size: 20px !important;
-// 		}
-
-// 		.introduction {
-// 			line-height: 1.7;
-// 			margin-bottom: $padding;
-// 		}
-
-// 		.button {
-// 			max-width: calc(#{$max-width} / 37 * 15);
-// 		}
-// 	}
-// }
+@include breakpoint($desktop) {
+  .block.hero {
+    .inner {
+      .hero-wrapper {
+        .page-title {
+          font-size: 4rem;
+          z-index: 10;
+        }
+      }
+    }
+  }
+}
